--- a/clientreactjs/src/DiAyTiOverridingStyles.scss
+++ b/clientreactjs/src/DiAyTiOverridingStyles.scss
@@ -55,3 +55,12 @@
         background-color: transparent !important;
     }
 }
+
+.friendCard {
+    background-color: white;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+
+    .friendAvatar {
+        border-bottom: 1px solid #d9d9d9;
+    }
+}
